# zigzag

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  .test_ascend_like.py.swp  LICENSE  MANIFEST.in  README.md  XXXXXXXXX.py  api.html  code-documentation.html  conda-spec-file-linux64.txt  conda-spec-file-win64.txt  contribute.html  debug.py  doxygen-conf  example.py  future.html  genindex.html  getting-started.html  hardware.html  index.html  installation.html  log.txt  main.html  main.py  main_gemm.py  main_gemm_l1.py  main_gemm_l1_l3.py  main_onnx.html  main_onnx.py  main_onnx_salsa.html  main_onnx_salsa.py  mapping.html  modules.html  objects.inv  outputs.html  pip-requirements.txt  publications.html  pyproject.toml  (+20 more)
.devcontainer/: devcontainer.json
.doctrees/: api.doctree  code-documentation.doctree  contribute.doctree  environment.pickle  future.doctree  getting-started.doctree  hardware.doctree  index.doctree  installation.doctree  main.doctree  main_onnx.doctree  main_onnx_salsa.doctree  mapping.doctree  modules.doctree  outputs.doctree  publications.doctree  stages.doctree  user-guide.doctree  visualization.doctree  workload.doctree  zigzag.classes.doctree  zigzag.classes.stages.doctree  zigzag.doctree
.github/: .pylintrc
.github/workflows/: .pylintrc  code-formatting.yml  pylint.yml  pyright.yml  python-test-typeguard.yml  python-test.yml  sphinx-build-and-deploy.yml  sphinx-build.yml  sphinx-pages.yml
_sources/: api.rst.txt  code-documentation.rst.txt  contribute.rst.txt  future.rst.txt  getting-started.rst.txt  hardware.rst.txt  index.rst.txt  installation.rst.txt  main_onnx.rst.txt  main_onnx_salsa.rst.txt  mapping.rst.txt  modules.rst.txt  outputs.rst.txt  publications.rst.txt  stages.rst.txt  user-guide.rst.txt  visualization.rst.txt  workload.rst.txt  zigzag.classes.rst.txt  zigzag.classes.stages.rst.txt  zigzag.rst.txt
classes/cost_model/: cost_model.py
classes/depthfirst/: data_copy_layer.py
classes/io/: gen_output_files.py  input_config.py  input_parser.py
classes/mapping/: combined_mapping.py  mapping_assist_funcs.py
classes/stages/: CostModelStage.py  DepthFirstStage.py  DumpStage.py  GeneralParameterIteratorStage.py  LomaStage.py  MainInputParserStages.py  ONNXModelParserStage.py  PlotTemporalMappingsStage.py  ReduceStages.py  RunOptStages.py  SaveStage.py  SpatialMappingConversionStage.py  SpatialMappingGeneratorStage.py  TemporalOrderingConversionStage.py  WorkloadStage.py  __init__.py  adjust_accelerator.py  salsa.py  salsa_pipeline.py
classes/workload/: dnn_workload.py  dummy_layer_node.py  layer_node.py  onnx_workload.py  runner.py  test_layer_node.py
docs/: doxygen-conf  requirements.txt
docs/doxygen-theme/: headerFile
docs/source/: api.rst  code-documentation.rst  conf.py  contribute.rst  future.rst  getting-started.rst  hardware.rst  index.rst  installation.rst  makefile  mapping.rst  publications.rst  stages.rst  user-guide.rst  visualization.rst  workload.rst  zigzag.rst
doxygen/html/: AcceleratorParserStage_8py.html  AcceleratorParserStage_8py.js  AcceleratorValidator_8py.html  AcceleratorValidator_8py.js  Accelerator_8py.html  Adder_8py.html  AimcArray_8py.js  (+3604 more)
lab1/: README.md  main.py  mapping.yaml
lab2/: README.md  main.py  mapping.yaml
lab3/: README.md  main.py
lab4/: README.md  imc_macro.yaml  main.py
lab5/: README.md  accelerator.yaml  main.py  mapping.yaml  resnet18_first_layer.onnx
lab6/: README.md  accelerator.yaml  main.py
outputs/: list_of_cmes.pickle
scratch/: convert_docstring.py  for_loops.py  modeling_opt_gemm.py  opt-125m_config.json  playground.py  scratch.py  transformer_mapping.py  transformer_workload.py  trivial.py  trivial_example.py
zigzag/: __init__.py  __main__.py  api.py  datatypes.py  utils.py
(+657 files in other folders)
